[tool.poetry]
name = "tut1"
version = "0.1.0"
description = ""
authors = ["DimitraM <mauridoudim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
langchain-openai = "^0.2.14"
openai = "^1.59.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
